package todolist;

public enum Importance {
    HIGH, MEDIUM, LOW
}
